# DivisionCore

./: .gitignore  Gametility.sln  LICENSE  README.md  index.md
.github/: FUNDING.yml
.github/workflows/: codeql-analysis.yml
DivisionCore/: Behaviour.cpp  Behaviour.h  CMakeLists.txt  Component.cpp  Component.h  Dictionary.cpp  Dictionary.h  Entity.cpp  Entity.h  EventEmitter.cpp  EventEmitter.h  EventHandler.cpp  EventHandler.h  EventHandling.h  EventObserver.cpp  EventObserver.h  GameController.cpp  GameController.h  GameObject.cpp  GameObject.h  HideFlags.cpp  HideFlags.h  MessageArgs.cpp  MessageArgs.h  NeighbourTemplate.cpp  NeighbourTemplate.h  Object.cpp  Object.h  ObjectMacros.cpp  ObjectMacros.h  PrimitiveType.cpp  PrimitiveType.h  Random.cpp  Random.h  RunningBehaviour.cpp  RunningBehaviour.h  Scene.cpp  Scene.h  Tile.cpp  Tile.h  (+14 more)
DivisionCore/codeinfo/: MessageArgs.codeinfo  Vector.codeinfo
Gametility/: Gametility.vcxproj  Gametility.vcxproj.filters  Vectors.cpp  Vectors.h  dllmain.cpp
Gametility/Debug/: Gametility.dll.recipe  Gametility.ilk  vc142.idb
Gametility/Debug/Gametility.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Gametility.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Gametility/EdgeCore/Core/Behaviour/CPP/: Component.cpp
Gametility/EdgeCore/Core/Behaviour/Headers/: Component.h  RunningBehaviour.h
Gametility/EdgeCore/Core/Entity/: GameObject.h
Gametility/EdgeCore/Core/Headers/: Object.h
Gametility/x64/Debug/: Gametility.dll.recipe  Gametility.ilk  vc142.idb
Gametility/x64/Debug/Gametility.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Gametility.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
